syntax = "proto3";

package io.mystore.order.view;

import "google/protobuf/timestamp.proto";

option java_outer_classname = "OrderModel";

message Order {
  string order_id = 1;
  string customer_id = 2;
  google.protobuf.Timestamp ordered_utc = 3;
  google.protobuf.Timestamp shipped_utc = 4;
  google.protobuf.Timestamp delivered_utc = 5;
  google.protobuf.Timestamp returned_utc = 6;
  google.protobuf.Timestamp canceled_utc = 7;
  repeated LineItem line_items = 8;
}

message LineItem {
  string product_id = 1;
  string product_name = 2;
  int32 quantity = 3;
}
